Generator Actor Movie Director Character Completed

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -138,11 +138,11 @@
         </td>
 
         <td>
-          <%= a_movie.description %>
+          <%= a_movie.description %>">
         </td>
 
         <td>
-          <%= a_movie.image %>
+          <img src="<%= a_movie.image %>">
         </td>
 
         <td>
