Before Action Complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,7 @@
         <a href="/characaters">Characters</a>
       </li>
 
-
-      <% if session.fetch(:user_id) == nil %>
+      <% if @current_user == nil %>
         <li> 
           <a href="/user_sign_up">Sign up</a>
         </li>
