Drop-down Complete

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -16,23 +16,23 @@
 
     <form action="/insert_bookmark" method="post">
       <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
-      </div>
-
-      <div>
         <label for="movie_id_box">
           Movie
         </label>
 
-        <input type="text" id="movie_id_box" name="query_movie_id">
+        <%#input type="text" id="movie_id_box" name="query_movie_id"> %>
       </div>
 
+      <select name="query_movie_id">
+        <% Movie.all.order(:title).each do |a_movie| %>
+          <option value="<%= a_movie.id %>">
+            <%= a_movie.title %>
+          </option>
+        <% end %>
+      </select>
+
       <button>
-        Create bookmark
+        Bookmark this movie!
       </button>
     </form>
   </div>
@@ -74,11 +74,11 @@
         </td>
 
         <td>
-          <%= a_bookmark.user_id %>
+          <%= a_bookmark.user.first_name %>
         </td>
 
         <td>
-          <%= a_bookmark.movie_id %>
+          <%= a_bookmark.movie.title %>
         </td>
 
         <td>
