MSM Sign-in Completed (FINAL)

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -64,6 +64,10 @@
         </th>
 
         <th>
+          Details
+        </th>
+
+        <th>
         </th>
       </tr>
 
@@ -93,6 +97,13 @@
             Show details
           </a>
         </td>
+
+        <td>
+          <a href="/delete_bookmark/<%= a_bookmark.id %>">
+            Un-bookmark
+          </a>
+        </td>
+
       </tr>
       <% end %>
     </table>
