--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -33,7 +33,7 @@
       <form action="/insert_bookmark" method="post">
       <input type="hidden" value="<%= @the_movie.id %>" id="movie_id_box" name="query_movie_id" class="form-control">
 
-        <button class="btn btn-block btn-outline-secondary">
+        <button>
           Bookmark this movie!
         </button>
       </form>
